--- a/style.css
+++ b/style.css
@@ -1,25 +1,28 @@
 @import url(https://fonts.google.com/specimen/Outfit);
 
 body{
+    height:100vh;
     margin:0px;
     background-color:hsl(212, 45%, 89%);
     display:flex;
-    align-content: center;
     justify-content:center;
     font-family: 'Outfit', sans-serif;
 }
 .box{
+    margin:auto;
     background-color:white;
     border-radius:10px;
-    justify-content: center;
+    display:flex;
+    flex-direction:column;
+    align-items: center;
 }
 img{
     border-radius:10px;
-    width:30vw;
+    width:20vw;
     margin:15px;
 }
 .text{
-    width:30vw;
+    width:20vw;
     margin:15px;
     text-align:center;
     margin-bottom:40px;
@@ -35,11 +38,11 @@ p{
 }
 
 
-@media only screen and (max-width:376px) {
+@media only screen and (max-width:426px) {
     img{
-        width:90vw;
+        width:80vw;
     }
     .text{
-        width:80vw;
+        width:70vw;
     }
 }
