--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body{
 .box{
     margin:auto;
     background-color:white;
-    border-radius:10px;
+    border-radius:20px;
+    box-shadow: 3px 4px 14px 1px rgba(0,0,0,0.21);
     display:flex;
     flex-direction:column;
     align-items: center;
